[package]
name = "grepper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
regex = "1.10.4"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
sys-info = "0.9.1"
assert_fs = "1.1.1"
